# rust_vulkan_imgui

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
src/app/: allocate_descriptor_sets.rs  clear.rs  copy_data_to_font_image.rs  copy_ui_data.rs  create_buffer.rs  create_command_pool.rs  create_descriptor_pool.rs  create_descriptor_set_layout.rs  create_fences.rs  create_font_image.rs  create_font_image_view.rs  create_fragment_shader_module.rs  create_framebuffers.rs  create_index_buffers.rs  create_pipeline.rs  create_pipeline_layout.rs  create_render_pass.rs  create_sampler.rs  create_semaphores.rs  create_vertex_buffers.rs  create_vertex_shader_module.rs  data.rs  draw.rs  handle_window_resize.rs  mod.rs  render_ui.rs  update_descriptor_set.rs  wait_resource_available.rs
src/app/vulkan_init/: check_instance_version.rs  check_required_instance_extensions.rs  clear.rs  create_allocator.rs  create_debug_utils_loader.rs  create_instance.rs  create_logical_device.rs  create_surface.rs  create_surface_loader.rs  create_swapchain.rs  create_swapchain_loader.rs  get_depth_format.rs  get_device_queue.rs  get_physical_device.rs  get_physical_device_properties.rs  get_present_mode.rs  get_queue_family.rs  get_surface_capabilities.rs  get_surface_extent.rs  get_surface_format.rs  get_swapchain_image_views.rs  get_swapchain_images.rs  init_vulkan.rs  mod.rs  rebuild_swapchain_data.rs  vulkan_init_data.rs
