[package]
authors = ["nc <nikita.cherniy@ibeo-as.com>"]
edition = "2018"
name = "rust_vulkan_gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
image = "0.23.11"
imgui = "0.6.0"
imgui-winit-support = "0.6.0"
log = "0.4.11"
static_assertions = "1.1.0"
vk-mem = "0.2.2"
winit = "0.23.0"
